--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
+    signature-pad{
+        canvas {
+            border: 1px dashed #333333;
+            width: 100%;
+            height: 200%;
+        }
+    }
 
 }
